--- a/contenido/sostenibilidad.html
+++ b/contenido/sostenibilidad.html
@@ -29,30 +29,23 @@
         <input type="checkbox" id="menu-bar" />
         <aside class="aside d-flex">
 
-            <ul class="w-100 pt-5">
-                <li>
-                    <a class="text-decoration-none text-white" href="Corporativo.html">CORPORATIVO
-                        <i class='bx bx-chevron-down fs-2'></i>
-                    </a>
-                    <ul class="py-2">
-                        <li class="menu-item">
-                            <a class="text-decoration-none" href="corporativo.html">Nuestra
-                                historia</a>
-                        </li>
-                        <li class="menu-item">
-                            <a class="text-decoration-none" href="compromiso.html">Nuestro
-                                compromiso legal</a>
-                        </li>
-                        <li class="menu-item">
-                            <a class="text-decoration-none" href="brochure.html">Corporativo</a>
-                        </li>
-                    </ul>
+            <ul class="w-100 pt-5 fs-5">
+
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="corporativo.html">Nuestra historia</a>
                 </li>
-                <li class="menu-item">
-                    <a class="text-decoration-none active" href="sostenibilidad.html">SOSTENIBILIDAD</a>
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="compromiso.html">Nuestro compromiso legal</a>
                 </li>
-                <li class="menu-item">
-                    <a class="text-decoration-none" href="contacto.html">CONTACTANOS</a>
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="brochure.html">Corporativo</a>
+                </li>
+
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="sostenibilidad.html">sostenibilidad</a>
+                </li>
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="contacto.html">Contáctanos</a>
                 </li>
             </ul>
 
@@ -76,7 +69,7 @@
             <!-- icono menu -->
             <div class="d-flex d-sm-none w-100 justify-content-end" style="align-items: center">
                 <label for="menu-bar" class="" style="width: 18%">
-                    <img class="w-100" src="img/menu.svg" alt="menu" /></label>
+                    <img class="w-100" src="/img/menu.svg" alt="menu" /></label>
             </div>
 
             <div class="d-none d-sm-flex justify-content-center">
@@ -126,12 +119,12 @@
 
                         <li class="d-flex">
                             <a class="h-100 p-2" href="/#lineaoro"><img src="/img/goldstart.png" alt=""
-                                    style="width: 46px;height: 46px;">&nbsp;&nbsp; Linea de Oro</a>
+                                    style="width: 40px;height: 40px;">&nbsp;&nbsp; Linea de Oro</a>
                         </li>
 
                         <li class="d-flex">
                             <a class="h-100 p-2" href="/#lineaplata"><img src="/img/silverstart.png" alt=""
-                                    style="width: 46px;height: 46   px;"> Linea de Plata</a>
+                                    style="width: 40px;height: 40px;"> Linea de Plata</a>
                         </li>
 
                         <li>
@@ -147,7 +140,8 @@
 
                 <h1 class="text-center mb-5">SOSTENIBILIDAD</h1>
 
-                <P class="fs-5">Conscientes de la afectación ambiental y social que genera nuestra actividad empresarial en la cadena
+                <P class="fs-5">Conscientes de la afectación ambiental y social que genera nuestra actividad empresarial
+                    en la cadena
                     productiva de metales preciosos, decidimos apoyar a la Fundación Reverd-Ser entidad sin animo de
                     lucro
                     orientada a promover y ejecutar procesos ambientales sostenibles y sociales, aportando al desrrollo
@@ -179,7 +173,7 @@
 
         </main>
 
-       <footer>
+        <footer>
             <div class="contact row row-cols-1 row-cols-sm-4 m-0">
                 <div class="item_contact col">
                     <i class="bx bx-copyright contact_icon"></i>
