--- a/contenido/contacto.html
+++ b/contenido/contacto.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="../css/valoros.css" />
     <link rel="icon" href="../img/LogoValoros -icono.ico" />
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-    
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11534101242"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'AW-11534101242');
@@ -46,30 +46,23 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         <input type="checkbox" id="menu-bar" />
         <aside class="aside d-flex">
 
-            <ul class="w-100 pt-5">
-                <li>
-                    <a class="text-decoration-none text-white" href="#">CORPORATIVO
-                        <i class='bx bx-chevron-down fs-2'></i>
-                    </a>
-                    <ul class="py-2">
-                        <li class="menu-item">
-                            <a class="text-decoration-none" href="corporativo.html">Nuestra
-                                historia</a>
-                        </li>
-                        <li class="menu-item">
-                            <a class="text-decoration-none" href="compromiso.html">Nuestro
-                                compromiso legal</a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="brochure.html">Corporativo</a>
-                        </li>
-                    </ul>
+            <ul class="w-100 pt-5 fs-5">
+
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="corporativo.html">Nuestra historia</a>
                 </li>
-                <li class="menu-item">
-                    <a class="text-decoration-none" href="sostenibilidad.html">SOSTENIBILIDAD</a>
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="compromiso.html">Nuestro compromiso legal</a>
                 </li>
-                <li class="menu-item">
-                    <a class="text-decoration-none active" href="contacto.html">CONTACTANOS</a>
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="brochure.html">Corporativo</a>
+                </li>
+
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="sostenibilidad.html">sostenibilidad</a>
+                </li>
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="contacto.html">Contáctanos</a>
                 </li>
             </ul>
 
@@ -83,22 +76,30 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
     <div class="container p-0 bg-light">
 
         <!-- logo-menu -->
-        <header class="d-flex justify-content-between">
-
-            <a href="../index.html">
-                <img class="w-75" style="margin-left: 20px;" src="../img/LogoValoros.webp" alt="logo-valoros" />
+        <header class="d-flex justify-content-between m-0 p-0">
+            <!-- imagen logo -->
+            <a href="/">
+                <img class="w-75" style="margin-left: 20px; min-width: 140px;" src="/img/LogoValoros.webp"
+                    alt="logo-valoros" />
             </a>
 
-            <div class="d-flex d-sm-none w-100 justify-content-end" style="align-items: center;">
-                <label for="menu-bar" class="" style="width: 18%;">
-                    <img class="w-100" src="../img/menu.svg" alt="menu" /></label>
+            <!-- icono menu -->
+            <div class="d-flex d-sm-none w-100 justify-content-end" style="align-items: center">
+                <label for="menu-bar" class="" style="width: 18%">
+                    <img class="w-100" src="/img/menu.svg" alt="menu" /></label>
             </div>
 
-
             <div class="d-none d-sm-flex justify-content-center">
-                <ul class="d-flex h-100">
+                <ul class="d-flex h-100 gap-5">
+                    <li class="nav-item">
+                        <a class="nav-link fs-5" href="/">Inicio</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link fs-5" href="sostenibilidad.html">Productos</a>
+                    </li> -->
+
                     <li class="has-submenu" style="position: relative;">
-                        <a class="nav-link fs-5 d-flex" href="#">Corporativo
+                        <a class="nav-link fs-5 d-flex" href="#">Nosotros
                             <i class='bx bx-chevron-down fs-2'></i>
                         </a>
                         <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
@@ -113,15 +114,16 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                             </li>
                         </ul>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link fs-5" href="sostenibilidad.html">Sostenibilidad</a>
+                        <a class="nav-link fs-5" href="sostenibilidad.html">sostenibilidad</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link fs-5 active" href="contacto.html">Contáctenos</a>
+
+                    <li class="menu-item">
+                        <a class="text-decoration-none text-white" href="contacto.html">Contáctanos</a>
                     </li>
                 </ul>
             </div>
-
         </header>
         <!-- logo-menu -->
 
@@ -129,26 +131,22 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
             <!-- menu:productos-servicios -->
             <section class="p-0 m-0">
-                <nav class="dark p-0 m-0">
+                <nav class="p-0 m-0 dark" style="background-color: #1A1A1A;">
                     <ul class="p-0 m-0">
 
-                        <li class="has-submenu">
-                            <a class="h-100 p-2 d-flex" href="#">
-                                Productos
-                                <i class='bx bx-chevron-down fs-2'></i>
-                            </a>
-                            <ul class="submenu">
-                                <li>
-                                    <a class="nav-link" href="lineaoro.html">Linea de Oro</a>
-                                </li>
-                                <li>
-                                    <a class="nav-link" href="lineaplata.html">Linea de Plata</a>
-                                </li>
-                            </ul>
+                        <li class="d-flex">
+                            <a class="h-100 p-2" href="/#lineaoro"><img src="/img/goldstart.png" alt=""
+                                    style="width: 40px;height: 40px;">&nbsp;&nbsp; Linea de Oro</a>
+                        </li>
+
+                        <li class="d-flex">
+                            <a class="h-100 p-2" href="/#lineaplata"><img src="/img/silverstart.png" alt=""
+                                    style="width: 40px;height: 40px;"> Linea de Plata</a>
                         </li>
 
                         <li>
-                            <a class="h-100 p-2" href="Servicios.html">Servicios Metalúrgicos</a>
+                            <a class="h-100 p-2 d-flex align-items-center" href="Servicios.html">Servicios
+                                Metalúrgicos</a>
                         </li>
 
                     </ul>
@@ -158,14 +156,14 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
             <section class="mt-5 px-5">
 
-                <h1 class="text-center mb-5">CONTACTO</h1>
+                <h1 class="text-center mb-5 text-dark">CONTACTO</h1>
                 <hr>
                 <div class="row mb-5 text-dark">
 
                     <div class="col-12 col-sm-6 order-sm-last mb-5">
 
                         <form action="https://formsubmit.co/bb2299c131b8c70322d0135dfe83db44" method="POST">
-                        <!-- <form action="https://formsubmit.co/info@valoros.co" method="POST"> -->
+                            <!-- <form action="https://formsubmit.co/info@valoros.co" method="POST"> -->
                             <div class="mb-3">
                                 <label for="nombre">Nombre</label>
                                 <input class="form-control" type="text" name="nombre" value="" id="nombre">
