--- a/contenido/corporativo.html
+++ b/contenido/corporativo.html
@@ -28,27 +28,23 @@
         <input type="checkbox" id="menu-bar" />
         <aside class="aside d-flex">
 
-            <ul class="w-100 pt-5">
-                <li>
-                    <a class="text-decoration-none text-white" href="#">CORPORATIVO
-                        <i class='bx bx-chevron-down fs-2'></i>
-                    </a>
-                    <ul class="py-2">
-                        <li class="menu-item">
-                            <a class="text-decoration-none active" href="corporativo.html">Nuestra
-                                historia</a>
-                        </li>
-                        <li class="menu-item">
-                            <a class="text-decoration-none" href="compromiso.html">Nuestro
-                                compromiso legal</a>
-                        </li>
-                    </ul>
+            <ul class="w-100 pt-5 fs-5">
+
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="corporativo.html">Nuestra historia</a>
                 </li>
-                <li class="menu-item">
-                    <a class="text-decoration-none" href="sostenibilidad.html">SOSTENIBILIDAD</a>
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="compromiso.html">Nuestro compromiso legal</a>
                 </li>
-                <li class="menu-item">
-                    <a class="text-decoration-none" href="contacto.html">CONTACTANOS</a>
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="brochure.html">Corporativo</a>
+                </li>
+
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="sostenibilidad.html">sostenibilidad</a>
+                </li>
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="contacto.html">Contáctanos</a>
                 </li>
             </ul>
 
@@ -72,7 +68,7 @@
             <!-- icono menu -->
             <div class="d-flex d-sm-none w-100 justify-content-end" style="align-items: center">
                 <label for="menu-bar" class="" style="width: 18%">
-                    <img class="w-100" src="img/menu.svg" alt="menu" /></label>
+                    <img class="w-100" src="/img/menu.svg" alt="menu" /></label>
             </div>
 
             <div class="d-none d-sm-flex justify-content-center">
