--- a/contenido/plata_pura.html
+++ b/contenido/plata_pura.html
@@ -43,30 +43,23 @@
         <input type="checkbox" id="menu-bar" />
         <aside class="aside d-flex">
 
-            <ul class="w-100 pt-5">
-                <li>
-                    <a class="text-decoration-none text-white" href="#">CORPORATIVO
-                        <i class='bx bx-chevron-down fs-2'></i>
-                    </a>
-                    <ul class="py-2">
-                        <li class="menu-item">
-                            <a class="text-decoration-none" href="corporativo.html">Nuestra
-                                historia</a>
-                        </li>
-                        <li class="menu-item">
-                            <a class="text-decoration-none" href="compromiso.html">Nuestro
-                                compromiso legal</a>
-                        </li>
-                        <li class="menu-item">
-                            <a class="text-decoration-none" href="brochure.html">Corporativo</a>
-                        </li>
-                    </ul>
+            <ul class="w-100 pt-5 fs-5">
+
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="corporativo.html">Nuestra historia</a>
                 </li>
-                <li class="menu-item">
-                    <a class="text-decoration-none" href="sostenibilidad.html">SOSTENIBILIDAD</a>
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="compromiso.html">Nuestro compromiso legal</a>
                 </li>
-                <li class="menu-item">
-                    <a class="text-decoration-none" href="contacto.html">CONTACTANOS</a>
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="brochure.html">Corporativo</a>
+                </li>
+
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="sostenibilidad.html">sostenibilidad</a>
+                </li>
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="contacto.html">Contáctanos</a>
                 </li>
             </ul>
 
